[gd_scene load_steps=19 format=2]

[ext_resource path="res://SPRITES/tilemap_1-1.png.png" type="Texture" id=1]
[ext_resource path="res://SCENES/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://SPRITES/npc_witness_1.png" type="Texture" id=3]
[ext_resource path="res://SCRIPTS/house_building_1.gd" type="Script" id=4]
[ext_resource path="res://SCENES/npc_witness_1_talk.tscn" type="PackedScene" id=5]
[ext_resource path="res://SPRITES/empty.png" type="Texture" id=6]
[ext_resource path="res://SPRITES/icon_e.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=8]
0/name = "tilemap_1-1.png.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 48, 48 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="house_building_1" type="Node2D"]
script = ExtResource( 4 )

[node name="tm_house_building_1" type="TileMap" parent="."]
tile_set = SubResource( 8 )
format = 1
tile_data = PoolIntArray( -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -196581, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131046, 0, 0, -131045, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 196609, 1, 0, 196609, 2, 0, 196609, 3, 0, 196609, 4, 0, 196609, 5, 0, 196609, 6, 0, 196609, 7, 0, 196609, 8, 0, 65536, 9, 0, 0, 10, 0, 65536, 11, 0, 65536, 12, 0, 65536, 13, 0, 0, 14, 0, 196609, 15, 0, 196609, 16, 0, 196609, 17, 0, 196609, 18, 0, 196609, 19, 0, 0, 20, 0, 196609, 21, 0, 196609, 22, 0, 131074, 23, 0, 131074, 24, 0, 131074, 25, 0, 0, 26, 0, 0, 27, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 196609, 65537, 0, 196609, 65538, 0, 196609, 65539, 0, 196609, 65540, 0, 196609, 65541, 0, 196609, 65542, 0, 196609, 65543, 0, 196609, 65544, 0, 65536, 65545, 0, 0, 65546, 0, 65536, 65547, 0, 196609, 65548, 0, 196609, 65549, 0, 196609, 65550, 0, 196609, 65551, 0, 196609, 65552, 0, 196609, 65553, 0, 196609, 65554, 0, 196609, 65555, 0, 196609, 65556, 0, 196609, 65557, 0, 196609, 65558, 0, 196609, 65559, 0, 131074, 65560, 0, 131074, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 131074, 131073, 0, 131074, 131074, 0, 131074, 131075, 0, 131074, 131076, 0, 196609, 131077, 0, 196609, 131078, 0, 196609, 131079, 0, 196609, 131080, 0, 196609, 131081, 0, 0, 131082, 0, 65536, 131083, 0, 196609, 131084, 0, 196609, 131085, 0, 196609, 131086, 0, 196609, 131087, 0, 196609, 131088, 0, 196609, 131089, 0, 196609, 131090, 0, 196609, 131091, 0, 196609, 131092, 0, 196609, 131093, 0, 196609, 131094, 0, 196609, 131095, 0, 196609, 131096, 0, 131074, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 131074, 196609, 0, 131074, 196610, 0, 131074, 196611, 0, 131074, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196609, 196615, 0, 196609, 196616, 0, 65536, 196617, 0, 0, 196618, 0, 65536, 196619, 0, 196609, 196620, 0, 196609, 196621, 0, 0, 196622, 0, 196609, 196623, 0, 196609, 196624, 0, 196609, 196625, 0, 196609, 196626, 0, 196609, 196627, 0, 0, 196628, 0, 196609, 196629, 0, 196609, 196630, 0, 196609, 196631, 0, 196609, 196632, 0, 196609, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 196609, 262145, 0, 196609, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196609, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 65536, 262153, 0, 0, 262154, 0, 65536, 262155, 0, 196609, 262156, 0, 196609, 262157, 0, 0, 262158, 0, 2, 262159, 0, 196609, 262160, 0, 196609, 262161, 0, 196609, 262162, 0, 196609, 262163, 0, 0, 262164, 0, 131074, 262165, 0, 131074, 262166, 0, 196609, 262167, 0, 196609, 262168, 0, 196609, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 2, 327681, 0, 2, 327682, 0, 196609, 327683, 0, 196609, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 0, 327690, 0, 65536, 327691, 0, 65536, 327692, 0, 65536, 327693, 0, 0, 327694, 0, 2, 327695, 0, 196609, 327696, 0, 196609, 327697, 0, 196609, 327698, 0, 196609, 327699, 0, 0, 327700, 0, 196609, 327701, 0, 196609, 327702, 0, 196609, 327703, 0, 131074, 327704, 0, 131074, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 196609, 393224, 0, 196609, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 196609, 393231, 0, 196609, 393232, 0, 196609, 393233, 0, 196609, 393234, 0, 196609, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 196609, 458753, 0, 196609, 458754, 0, 196609, 458755, 0, 196609, 458756, 0, 196609, 458757, 0, 196609, 458758, 0, 196609, 458759, 0, 196609, 458760, 0, 196609, 458761, 0, 196609, 458762, 0, 196609, 458763, 0, 196609, 458764, 0, 196609, 458765, 0, 0, 458766, 0, 196609, 458767, 0, 196609, 458768, 0, 196609, 458769, 0, 196609, 458770, 0, 196609, 458771, 0, 196608, 458772, 0, 196608, 458773, 0, 1, 458774, 0, 1, 458775, 0, 196608, 458776, 0, 196608, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 131073, 524289, 0, 196609, 524290, 0, 196609, 524291, 0, 196609, 524292, 0, 65536, 524293, 0, 65536, 524294, 0, 131072, 524295, 0, 65538, 524296, 0, 131072, 524297, 0, 65538, 524298, 0, 131072, 524299, 0, 196609, 524300, 0, 196609, 524301, 0, 0, 524302, 0, 196609, 524303, 0, 196609, 524304, 0, 196609, 524305, 0, 196609, 524306, 0, 196609, 524307, 0, 196609, 524308, 0, 196609, 524309, 0, 196609, 524310, 0, 196609, 524311, 0, 196609, 524312, 0, 196608, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 131073, 589825, 0, 196609, 589826, 0, 196609, 589827, 0, 196609, 589828, 0, 65539, 589829, 0, 65536, 589830, 0, 65538, 589831, 0, 131072, 589832, 0, 65538, 589833, 0, 131072, 589834, 0, 65538, 589835, 0, 196609, 589836, 0, 196609, 589837, 0, 0, 589838, 0, 196609, 589839, 0, 196609, 589840, 0, 196609, 589841, 0, 196609, 589842, 0, 196609, 589843, 0, 196609, 589844, 0, 196609, 589845, 0, 196609, 589846, 0, 196609, 589847, 0, 196609, 589848, 0, 196608, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 131073, 655361, 0, 196609, 655362, 0, 196609, 655363, 0, 196609, 655364, 0, 65539, 655365, 0, 65536, 655366, 0, 131072, 655367, 0, 65538, 655368, 0, 131072, 655369, 0, 65538, 655370, 0, 131072, 655371, 0, 196609, 655372, 0, 196609, 655373, 0, 0, 655374, 0, 196609, 655375, 0, 196609, 655376, 0, 196609, 655377, 0, 196609, 655378, 0, 196609, 655379, 0, 196609, 655380, 0, 196609, 655381, 0, 196609, 655382, 0, 196609, 655383, 0, 196609, 655384, 0, 196608, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 131073, 720897, 0, 196609, 720898, 0, 196609, 720899, 0, 196609, 720900, 0, 65536, 720901, 0, 65536, 720902, 0, 65538, 720903, 0, 131072, 720904, 0, 65538, 720905, 0, 131072, 720906, 0, 65538, 720907, 0, 196609, 720908, 0, 196609, 720909, 0, 196609, 720910, 0, 196609, 720911, 0, 196609, 720912, 0, 196609, 720913, 0, 196609, 720914, 0, 196609, 720915, 0, 196609, 720916, 0, 196609, 720917, 0, 196609, 720918, 0, 196609, 720919, 0, 196609, 720920, 0, 196608, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 196609, 786433, 0, 196609, 786434, 0, 196609, 786435, 0, 196609, 786436, 0, 196609, 786437, 0, 196609, 786438, 0, 196609, 786439, 0, 2, 786440, 0, 2, 786441, 0, 2, 786442, 0, 196609, 786443, 0, 196609, 786444, 0, 196609, 786445, 0, 196609, 786446, 0, 196609, 786447, 0, 196609, 786448, 0, 196609, 786449, 0, 196608, 786450, 0, 196608, 786451, 0, 196608, 786452, 0, 131074, 786453, 0, 131074, 786454, 0, 196608, 786455, 0, 196608, 786456, 0, 196608, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1312, 112 )
collision_layer = 3
collision_mask = 3

[node name="npc_witness" type="StaticBody2D" parent="."]
position = Vector2( 416, 160 )

[node name="coll_npc_witness" type="CollisionShape2D" parent="npc_witness"]
shape = SubResource( 9 )

[node name="spr_npc_witness" type="Sprite" parent="npc_witness"]
position = Vector2( -4.14848e-05, -2.5034e-05 )
texture = ExtResource( 3 )

[node name="area_npc_witness" type="Area2D" parent="npc_witness"]
collision_layer = 2
collision_mask = 2

[node name="coll_area_npc_witness" type="CollisionShape2D" parent="npc_witness/area_npc_witness"]
shape = SubResource( 10 )

[node name="npc_witness_1_talk" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 16, 0 )

[node name="e_icon" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1528, 760 )
frames = SubResource( 11 )
frame = 1
playing = true

[connection signal="body_entered" from="npc_witness/area_npc_witness" to="." method="_on_area_npc_witness_body_entered"]
[connection signal="body_exited" from="npc_witness/area_npc_witness" to="." method="_on_area_npc_witness_body_exited"]
